refactor(bootstrap,adapter,application): stabilize configuration, exception structure, and project result mapping
- reorganize adapter exceptions into coherent sub-packages
- introduce CodegenProfilesRegistry to separate lookup/validation from properties
- simplify CodegenProfilesProperties into a pure configuration holder
- refactor bootstrap config packaging for clearer responsibilities
- rename and align CreateProjectResponseMapper to CreateProjectResultMapper
- keep application/usecase and domain contracts stable while cleaning internals